--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,10 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-google-maps": "^9.4.5",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "0.9.5"
+    "react-scripts": "0.9.5",
+    "recompose": "^0.30.0"
   },
   "devDependencies": {
     "axios": "^0.18.0"
