--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-datepicker": "^2.5.0",
     "react-dom": "^16.8.6",
     "react-google-maps": "^9.4.5",
+    "react-iframe": "^1.8.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "0.9.5",
     "recompose": "^0.30.0"
